--- a/02-css-js-clock/index.html
+++ b/02-css-js-clock/index.html
@@ -7,19 +7,17 @@
 </head>
 
 <body>
-    <div class="background-image">
+    <div class="background-image"></div>
 
-    </div>
-        <section class="clock-body">
-            <div class="clock-face">
-                <div class="clock-hand hour-hand"></div>
-                <div class="clock-hand min-hand"></div>
-                <div class="clock-hand sec-hand"></div>
-            </div>
-        </section>
+    <section class="clock-body">
+        <div class="clock-face">
+            <div class="clock-hand hour-hand"></div>
+            <div class="clock-hand min-hand"></div>
+            <div class="clock-hand sec-hand"></div>
+        </div>
+    </section>
 
-
+    <script src="clocklogic.js"></script>
 
 </body>
-
 </html>
