--- a/02-css-js-clock/index.html
+++ b/02-css-js-clock/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="background-image"></div>
 
-    <section class="clock-body">
+    <div class="clock-body">
         <div class="clock-face">
-            <div class="clock-hand hour-hand"></div>
-            <div class="clock-hand min-hand"></div>
-            <div class="clock-hand sec-hand"></div>
+            <div class="clock-hand" id="hour-hand"></div>
+            <div class="clock-hand" id="min-hand"></div>
+            <div class="clock-hand" id="sec-hand"></div>
         </div>
-    </section>
+    </div>
 
     <script src="clocklogic.js"></script>
 
